
----- V2.4 (development, see CVS) ----

2003-04-15, Rob Hillis
  Clean up Help subsystem, removed dead links and added link to forum on support page.
   - zentrack/includes/leftHelp.php
   - zentrack/www/help/index.php
   - zentrack/www/help/support.php
  Fix up incorrect debug information request in zentrack/HELP ($Debug_Mode instead of $this->debug)
   - zentrack/HELP
   - help/support.php

2003-04-14, Rob Hillis
  Fixed broken link to GPL License in Help section
   - zentrack/www/help/gpl.php
   - zentrack/includes/misc/LICENSE-GPL-2.0
  Added a support page.
   - zentrack/www/help/support.php
   - zentrack/includes/leftHelp.php
  Cleaned up the about page.
	- zentrack/www/help/about.php

2003-04-14, Kato
  Fixed problem with emails sent to egate with ``,'' in reply address
    - zentrack/includes/egate_utils.php 1.22

2003-04-10, Kato
  Removed extra shebang (causing stdout message) from included file
    - zentrack/install/egate_config.php.default 1.9
  Fixed problem with ticket reply addresses when using egate
  The reply address will now always point to egate if enabled
    - zentrack/includes/zenTrack.class 1.88
  Reinstated the auto-close for "note" types
    - zentrack/www/addSubmit.php 1.16

2003-04-02, Kato
  Fixed buttons and tabs to translate properly
    - zentrack/includes/templates/ticket_actionBar.php 1.7
    - zentrack/includes/templates/ticket_box.php 1.10
  Enhanced Debugging Output
    - zentrack/includes/footer.php 1.18
    - zentrack/includes/zen.class 1.18
    - zentrack/includes/translator.class 1.5
  Added German translation
    - zentrack/includes/translations/german.trans 1.1
  Postgres Testing/Compatability
    - zentrack/includes/db.class 1.22
    - zentrack/includes/zenTrack.class 1.86
    - zentrack/www/admin/bins.php 1.4
    - zentrack/www/admin/editUserSubmit.php 1.8
    - zentrack/www/admin/priorities.php 1.4
    - zentrack/www/admin/systems.php 1.4
    - zentrack/www/admin/tasks.php 1.5
    - zentrack/www/admin/types.php 1.5
